--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -632,7 +632,7 @@
     <string name="prefs_show_ecosystem_apps_summary">Consigli delle applicazioni di Nextcloud nell\'intestazione di navigazione</string>
     <string name="prefs_show_hidden_files">Mostra i file nascosti</string>
     <string name="prefs_sourcecode">Ottieni codice sorgente</string>
-    <string name="prefs_storage_path">Cartella di archiviazione dei dati</string>
+    <string name="prefs_data_storage_location">Cartella di archiviazione dei dati</string>
     <string name="prefs_sycned_folders_summary">Gestisci le cartelle per il caricamento automatico</string>
     <string name="prefs_synced_folders_local_path_title">Cartella locale</string>
     <string name="prefs_synced_folders_remote_path_title">Cartella remota</string>
