--- a/app/src/main/res/values-pt-rPT/strings.xml
+++ b/app/src/main/res/values-pt-rPT/strings.xml
@@ -588,7 +588,7 @@
     <string name="prefs_show_ecosystem_apps_summary">Sugestões de aplicações Nextcloud no cabeçalho da navegação</string>
     <string name="prefs_show_hidden_files">Mostrar ficheiros ocultados</string>
     <string name="prefs_sourcecode">Obter código fonte</string>
-    <string name="prefs_storage_path">Pasta de armazenamento de dados</string>
+    <string name="prefs_data_storage_location">Pasta de armazenamento de dados</string>
     <string name="prefs_sycned_folders_summary">Gerir as pastas para o envio automático</string>
     <string name="prefs_synced_folders_local_path_title">Pasta Local</string>
     <string name="prefs_synced_folders_remote_path_title">Pasta Remota</string>
