--- a/app/src/main/res/values-tk/strings.xml
+++ b/app/src/main/res/values-tk/strings.xml
@@ -485,7 +485,7 @@
     <string name="prefs_manage_accounts">Hasabyňyzy dolandyrmak</string>
     <string name="prefs_show_hidden_files">Gizlin faýllary görkez</string>
     <string name="prefs_sourcecode">Çeşme koduny alyň</string>
-    <string name="prefs_storage_path">Maglumat saklaýyş bukjasy</string>
+    <string name="prefs_data_storage_location">Maglumat saklaýyş bukjasy</string>
     <string name="prefs_sycned_folders_summary">Awtomatik ýüklemek üçin bukjalary dolandyrmak</string>
     <string name="prefs_synced_folders_local_path_title">ýerli bukjasy</string>
     <string name="prefs_synced_folders_remote_path_title">Uzakdaky bukja</string>
