Warn when file extension is renamed
Signed-off-by: tobiasKaminsky <tobias@kaminsky.me>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1268,11 +1268,10 @@
     <string name="please_select_a_server">Please select a server…</string>
     <string name="notification_icon_description">Unread notifications exist</string>
     <string name="unset_internal_two_way_sync_description">Remove folder from internal two way sync</string>
-
     <string name="two_way_sync_activity_empty_list_title">Two way sync not set up</string>
     <string name="two_way_sync_activity_empty_list_desc">To set up a two way sync folder, please enable it in the details tab of the folder in question.</string>
     <string name="two_way_sync_activity_title">Internal two way sync</string>
     <string name="two_way_sync_activity_disable_all_button_title">Disable for all folders</string>
-
     <string name="oc_file_list_adapter_offline_operation_remove_description_text">Pending Remove Operation</string>
+    <string name="warn_rename_extension">Renaming extension might make the file unusable</string>
 </resources>
