--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1237,4 +1237,5 @@
     <string name="file_name_validator_error_forbidden_space_character_extensions">Filenames must not contain spaces at the beginning or end</string>
     <string name="sync">Sync</string>
     <string name="please_select_a_server">Please select a server…</string>
+    <string name="unset_internal_two_way_sync_description">Remove folder from internal two way sync</string>
 </resources>
