--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1273,5 +1273,5 @@
     <string name="two_way_sync_activity_title">Internal two way sync</string>
     <string name="two_way_sync_activity_disable_all_button_title">Disable for all folders</string>
     <string name="oc_file_list_adapter_offline_operation_remove_description_text">Pending Remove Operation</string>
-    <string name="warn_rename_extension">Renaming extension might make the file unusable</string>
+    <string name="warn_rename_extension">Changing the extension might cause this file to open in a different application</string>
 </resources>
