--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1250,4 +1250,5 @@
     <string name="unset_internal_two_way_sync_description">Remove folder from internal two way sync</string>
     <string name="internal_two_way_sync_list_empty_headline">No two way sync folder yet</string>
     <string name="internal_two_way_sync_text">To setup a two way sync folder, please enable it in details of desired folder.</string>
+    <string name="internal_two_way_sync_headline">Internal two way sync</string>
 </resources>
