--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1249,6 +1249,6 @@
     <string name="notification_icon_description">Unread notifications exist</string>
     <string name="unset_internal_two_way_sync_description">Remove folder from internal two way sync</string>
     <string name="internal_two_way_sync_list_empty_headline">No two way sync folder yet</string>
-    <string name="internal_two_way_sync_text">To setup a two way sync folder, please enable it in details of desired folder.</string>
+    <string name="internal_two_way_sync_text">To set up a two way sync folder, please enable it in the details tab of the folder in question.</string>
     <string name="internal_two_way_sync_headline">Internal two way sync</string>
 </resources>
