--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,16 +118,9 @@
     <string name="prefs_two_way_sync_switch_title">Enable two way sync</string>
     <string name="prefs_two_way_sync_interval">Interval</string>
 
-    <string name="two_way_sync_interval_15_min">15 minutes</string>
-    <string name="two_way_sync_interval_30_min">30 minutes</string>
-    <string name="two_way_sync_interval_45_min">45 minutes</string>
-    <string name="two_way_sync_interval_1_hour">1 hour</string>
-    <string name="two_way_sync_interval_2_hours">2 hours</string>
-    <string name="two_way_sync_interval_4_hours">4 hours</string>
-    <string name="two_way_sync_interval_6_hours">6 hours</string>
-    <string name="two_way_sync_interval_8_hours">8 hours</string>
-    <string name="two_way_sync_interval_12_hours">12 hours</string>
-    <string name="two_way_sync_interval_24_hours">24 hours</string>
+    <string name="two_way_sync_interval_minutes">%1$s minutes</string>
+    <string name="two_way_sync_interval_hour">%1$s hour</string>
+    <string name="two_way_sync_interval_hours">%1$s hours</string>
 
     <string name="recommend_subject">Try %1$s on your device!</string>
     <string name="recommend_text">I want to invite you to use %1$s on your device.\nDownload here: %2$s</string>
