--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="actionbar_see_details">Details</string>
     <string name="actionbar_send_file">Send</string>
     <string name="actionbar_sort">Sort</string>
+    <string name="common_settings">Settings</string>
     <string name="sort_by">Sort by</string>
     <string name="menu_item_sort_by_name_a_z">A - Z</string>
     <string name="menu_item_sort_by_name_z_a">Z - A</string>
@@ -500,7 +501,6 @@
     <string name="forbidden_permissions_create">to create this file</string>
     <string name="uploader_upload_forbidden_permissions">to upload to this folder</string>
     <string name="downloader_download_file_not_found">The file is no longer available on the server</string>
-
     <string name="file_migration_dialog_title">Updating data storage folder</string>
     <string name="file_migration_preparing">Preparing migration…</string>
     <string name="file_migration_checking_destination">Checking destination…</string>
