--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1296,4 +1296,5 @@
     <string name="warn_rename_extension">Changing the extension might cause this file to open in a different application</string>
     <string name="auto_upload_gplay">Auto upload behaviour changed</string>
     <string name="auto_upload_gplay_desc">Due to new restrictions imposed by Google, the auto upload feature will no longer be able to automatically remove uploaded files.</string>
+    <string name="pick_contact_to_share_with">Pick contact to share with</string>
 </resources>
